--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "oxc-transform": "^0.15.1",
-    "typescript": "5.5.1-rc",
+    "typescript": "5.5.2",
     "vitest": "^1.6.0"
   }
 }
