--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "bench": "vitest bench --run"
   },
   "devDependencies": {
+    "@swc/core": "^1.7.23",
     "oxc-transform": "^0.17.2",
-    "typescript": "^5.5.3",
-    "vitest": "^2.0.0"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "packageManager": "pnpm@9.5.0"
 }
