--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "bench-transformer",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "bench": "vitest bench --run"
   },
   "devDependencies": {
-    "@swc/core": "^1.7.23",
-    "oxc-transform": "^0.27.0",
-    "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@swc/core": "^1.7.28",
+    "oxc-transform": "^0.30.1",
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.1"
   },
   "packageManager": "pnpm@9.10.0"
 }
