--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@swc/core": "^1.7.28",
     "oxc-transform": "^0.30.4",
+    "react-refresh": "^0.14.2",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
   },
