--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bench-transformer",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@9.10.0",
   "scripts": {
     "bench": "vitest bench --run"
   },
@@ -12,10 +12,12 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@swc/core": "^1.7.28",
+    "@types/babel__core": "^7.20.5",
+    "@types/node": "^22.7.4",
     "oxc-transform": "^0.30.4",
+    "prettier": "^3.3.3",
     "react-refresh": "^0.14.2",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
-  },
-  "packageManager": "pnpm@9.10.0"
+  }
 }
