--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@swc/core": "^1.7.28",
+    "@swc/core": "1.7.29-nightly-20241001.1",
     "@types/babel__core": "^7.20.5",
     "@types/node": "^22.7.4",
     "oxc-transform": "^0.30.5",
